# micro-benchmarks

./: CMakeLists.txt  Makefile  README.md  configure
data/: README.md
include/: barrier.hpp  main.hpp  net_benchmark.hpp
micro-benchmark/: actors.cpp  data.hpp.in  main.cpp  main.hpp  serialization.cpp  socket-communication.cpp
src/: actors.cpp  dummy.cpp  json.cpp  main.cpp  message-creation.cpp  or_else.cpp  pattern-matching.cpp  serialization.cpp  socket-communication.cpp
